--- a/index.html
+++ b/index.html
@@ -115,43 +115,44 @@
 
             </div>
 
-            <!-- Modal de informações -->
+
             <div id="infoModal" class="modal" style="display:none;">
                 <div class="modal-content">
                     <span class="close" onclick="closeModal()">&times;</span>
-                    <h2>Informações da Tabela</h2>
+                    <h2>Table Information</h2>
                     <br>
-                    <p><strong>id:</strong> Identificador único do jogador.</p>
-                    <p><strong>Player:</strong> Nome do jogador.</p>
-                    <p><strong>Nation:</strong> País do jogador.</p>
-                    <p><strong>Position:</strong> Posição do jogador.</p>
-                    <p><strong>Squad:</strong> Nome da equipe do jogador.</p>
-                    <p><strong>Comp:</strong> Liga em que a equipe está competindo.</p>
-                    <p><strong>Age:</strong> Idade do jogador.</p>
-                    <p><strong>MP:</strong> Jogos disputados.</p>
-                    <p><strong>Min:</strong> Minutos jogados.</p>
-                    <p><strong>Goals:</strong> Gols marcados.</p>
-                    <p><strong>Assists:</strong> Assistências.</p>
-                    <p><strong>Shots:</strong> Total de chutes (não inclui pênaltis).</p>
-                    <p><strong>SoT:</strong> Chutes no alvo (não inclui pênaltis).</p>
-                    <p><strong>Int:</strong> Interceptações.</p>
-                    <p><strong>TklWon:</strong> Desarmes em que a equipe do desarmador ganhou a posse de bola.</p>
-                    <p><strong>Recov:</strong> Número de bolas recuperadas.</p>
-                    <p><strong>Fls:</strong> Faltas cometidas.</p>
-                    <p><strong>CrdY:</strong> Cartões amarelos.</p>
-                    <p><strong>CrdR:</strong> Cartões vermelhos.</p>
+                    <p><strong>id:</strong> Unique identifier of the player.</p>
+                    <p><strong>Player:</strong> Name of the player.</p>
+                    <p><strong>Nation:</strong> Country of the player.</p>
+                    <p><strong>Position:</strong> Position of the player.</p>
+                    <p><strong>Squad:</strong> Name of the player's team.</p>
+                    <p><strong>Comp:</strong> League in which the team is competing.</p>
+                    <p><strong>Age:</strong> Age of the player.</p>
+                    <p><strong>MP:</strong> Matches played.</p>
+                    <p><strong>Min:</strong> Minutes played.</p>
+                    <p><strong>Goals:</strong> Goals scored.</p>
+                    <p><strong>Assists:</strong> Assists.</p>
+                    <p><strong>Shots:</strong> Total shots (excluding penalties).</p>
+                    <p><strong>SoT:</strong> Shots on target (excluding penalties).</p>
+                    <p><strong>Int:</strong> Interceptions.</p>
+                    <p><strong>TklWon:</strong> Tackles won where the tackler's team gained possession.</p>
+                    <p><strong>Recov:</strong> Number of balls recovered.</p>
+                    <p><strong>Fls:</strong> Fouls committed.</p>
+                    <p><strong>CrdY:</strong> Yellow cards.</p>
+                    <p><strong>CrdR:</strong> Red cards.</p>
                     <br>
-                    <p><strong>Clique em um jogador para uma análise mais detalhada.</strong></p>
+                    <p>The blue color at the top of the table is for sorting the column in descending order, and the red color is for sorting in ascending order.</p>
+                    <br>
+                    <p><strong>Click on a player for a more detailed analysis.</strong></p>
                 </div>
             </div>
 
         </div>
     </main>
     <footer class="footer">
-        <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data and player photos
-            from
-            <a href="https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats"
-                target="_blank">Kaggle</a>
+        <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data from <a href="https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats"
+            target="_blank">Kaggle</a> and player photos
+            from <a href="https://www.thesportsdb.com/" target="_blank">thesportsdb</a>
         </p>
     </footer>
     <script src="js/nav.js"></script>
