--- a/insights.html
+++ b/insights.html
@@ -58,11 +58,11 @@
   
 
   <footer class="footer">
-    <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data and player photos
-      from
-      <a href="https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats" target="_blank">Kaggle</a>
+    <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data from <a href="https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats"
+        target="_blank">Kaggle</a> and player photos
+        from <a href="https://www.thesportsdb.com/" target="_blank">thesportsdb</a>
     </p>
-  </footer>
+</footer>
   <script src="js/insights.js"></script>
   <script>
 
