--- a/player-details.html
+++ b/player-details.html
@@ -68,8 +68,6 @@
 
     <div class="flex-container">
 
-
-        <!-- Table container for percentile data -->
         <div id="table-container">
             <div id="tooltip5"
                 style="position: absolute; background-color: rgba(0, 0, 0, 0.7); color: white; padding: 5px; border-radius: 5px; opacity: 0;">
@@ -108,10 +106,10 @@
 
 
     <footer class="footer">
-        <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data and player photos
-            from
-            <a href="https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats"
-                target="_blank">Kaggle</a>
+        <p><strong>FootVis</strong> by Cristiano Nicolau and Miguel Miragaia © 2024<br>Football data from <a
+                href="https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats"
+                target="_blank">Kaggle</a> and player photos
+            from <a href="https://www.thesportsdb.com/" target="_blank">thesportsdb</a>
         </p>
     </footer>
 
