fix: update stylesheet links to use relative paths and improve position count calculation

--- a/insights.html
+++ b/insights.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Player Insights</title>
-  <link rel="stylesheet" href="./css/charts.css">
+  <title>Player Insights - Football Visualization</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <link rel="stylesheet" href="./css/styles.css">
-  <link rel="stylesheet" href="./css/insights.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/insights.css">
 
   <script src="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.js.iife.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.css" />
